--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 font-family: 'Montserrat', sans-serif;
 }
 .dark{
-  background-color: #0F1016;
+  background-color: #121212;
   color: #fff;
 }
 /* width */
